# directplay4

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
directplay4/: ActiveSessions.cs  BUILD.bazel  Container.cs  EnumerationService.cs  IncomingMessage.cs  Messages.cs  OutboundService.cs  OutgoingMessage.cs  ServerInfo.cs  ServiceCollectionExtensions.cs  Session.cs  SessionFilter.cs  SessionService.cs
examples/server/: BUILD.bazel  Program.cs
